--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <input type="file" accept="image/*" id="fileInput" onchange="scanQRCode()">
         <label for="fileInput" id="scanButton">
           <img src="upload.png" alt="Upload" class="upload-icon">
-          Upload HTML File
+          Upload
         </label>
         <!--
 
